# bugownerctl

./: .bandit  .gitignore  .gitlab-ci.yml  CHANGELOG.md  README.md  check_package_maintainer.py  check_package_maintainer.sh  create_whitelist_maintainership.py  false_positives.json  pyproject.toml  requirements.txt  validate_json_file.py  validate_maintainership.py  validate_maintainership.yaml
.github/workflows/: ci.yml
docs/adr/: 0001-source-name-resolution.md
scripts/: check.sh  fix.sh  prototype_obs_api.py
src/bugowner/: cli.py
src/bugowner/commands/: init.py  query.py  validate.py  whitelist.py
src/bugowner/data/: config.example.yaml  false_positives.seed.json  false_positives_overrides.json
src/bugowner/domain/: maintainer.py  package.py  ref_type.py
src/bugowner/repositories/: __init__.py  false_positives_repository.py  git_repository.py  maintainership_repository.py  name_overrides_repository.py  (+3 more)
src/bugownerctl/: cli.py  exceptions.py  exit_codes.py
tests/: test_bulk_map.py  test_check_command.py  test_cli.py  test_config.py  test_config_search.py  test_exceptions.py  test_exit_codes.py  test_false_positives_repository.py  test_file_utils.py  test_git_repository.py  test_init_command.py  test_log_messages.py  test_maintainer.py  test_maintainer_data.py  test_maintainership_repository.py  test_name_overrides_repository.py  test_obs_bulk_source_info_repository.py  test_obs_person_repository.py  test_obs_repository.py  test_obs_repository_old_format.py  test_package.py  test_query_command.py  test_query_service.py  test_ref_type.py  test_repo_metadata_repository.py  test_repo_prep.py  test_seed.py  test_user_validation_service.py  test_validate_command.py  test_validate_slfo_repo.py  test_validation_service.py  test_whitelist_command.py  test_whitelist_service.py
tests/fixtures/: obs_bulk_sample.xml
tests/integration/: test_end_to_end.py  test_validate_matches_old.py
(+30 files in other folders)
