[project]
name = "bugowner"
version = "0.1.0"
description = "Bug ownership and package maintainership validation tool"
authors = [
    {name = "Gustavo Yokoyama Ribeiro", email = "gyribeiro@suse.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "lxml>=4.9.0",
    "PyYAML>=6.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
    "bandit>=1.7.0",
    "types-requests>=2.31.0",
    "types-PyYAML>=6.0",
]

[project.scripts]
bugowner = "bugowner.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bugowner"]

[tool.hatch.build.targets.wheel.force-include]
"src/bugowner/data/config.example.yaml" = "bugowner/data/config.example.yaml"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
explicit_package_bases = true
mypy_path = "src"
namespace_packages = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=src/bugowner --cov-report=term-missing --cov-fail-under=90"
